--- a/package.json
+++ b/package.json
@@ -1,33 +1,1 @@
-{ "homepage": "http://{github-username}.github.io/{repo-name}",
-  "name": "netflix-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
-  },
-  "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
-  }
-}
-
+{"homepage":"http://{github-username}.github.io/{repo-name}","name":"netflix-clone","version":"0.1.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint","predeploy":"npm run build","deploy":"gh-pages -d build"},"dependencies":{"@heroicons/react":"^1.0.6","@types/node":"18.16.1","@types/react":"18.2.0","@types/react-dom":"18.2.1","autoprefixer":"10.4.14","eslint":"8.39.0","eslint-config-next":"13.3.1","next":"13.3.1","postcss":"8.4.23","react":"18.2.0","react-dom":"18.2.0","react-icons":"^4.8.0","tailwind-scrollbar-hide":"^1.1.7","tailwindcss":"3.3.2","typescript":"5.0.4"},"devDependencies":{"gh-pages":"^5.0.0","tailwind-scrollbar":"^3.0.0","tailwindcss-textshadow":"^2.1.3"}}
